<resources>
    <string name="app_name" translatable="false">Loan Advisor</string>
    <string name="hello_blank_fragment">Coming soon</string>
    <string name="green_top_bar" translatable="false">Green Top Bar</string>
    <string name="login_email">Enter your email</string>
    <string name="login_password">Enter your password</string>
    <string name="login_description_text">Welcome! Enter your credentials to login</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="registration_description">Hello! Register to get started</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_button">Register</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="registration_register_button">Register</string>
    <string name="login_login_button">Login</string>
    <string name="menu_loan_calculator">Loan Calculator</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_compare_loans">Compare Loans</string>
    <string name="article_coming_soon_image">article coming soon image</string>
    <string name="coming_soon">Coming soon</string>
    <string name="compare_image_coming_soon_image">compare coming soon image</string>
    <string name="calculator_get_advice">Get Advice</string>
    <string name="calculator_loan_interest">Loan Interest</string>
    <string name="calculator_loan_amount">Loan Amount</string>
    <string name="calculator_loan_term">Loan Term</string>
    <string name="calculator_salary">Your Monthly Income</string>
    <string name="advice_coming_soon_image">advice coming soon image</string>
    <string name="login_checking_credentials">Checking log in credential...</string>
    <string name="registration_registering_user_text">Registering user...</string>
</resources>