<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoanCalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:id="@+id/calculator_loan_amount_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculator_loan_amount"
                android:paddingTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:id="@+id/calculator_loan_interest_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculator_loan_interest"
                android:paddingTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:id="@+id/calculator_loan_term_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculator_loan_term"
                android:paddingTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:id="@+id/calculator_salary_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculator_salary"
                android:paddingBottom="20dp"
                android:paddingTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_advice_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:height="64dp"
                android:text="@string/calculator_get_advice" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>